2017/08/24 v192
	1. The cooldown label won't display for global cooldown on the action buttons.

2017/08/14 v191
	1. Fix bugs for the opacity mechanism.
	2. The opacity will only affect when lock the bars.

2017/08/14 v190
	1. Max opacity and min opacity settings are added for the action bar.

2017/06/17 v189
	1. Fix the tip for tokens.

2017/05/21 v188
	1. Add a missing line to fix tip filter changing not work for auto popup action bar.

2017/05/15 v187
	1. Fix the buff order when change the specialization.

2017/05/06 v186
	1. Fix error when delete item form auto popup list.

2017/05/05 v185
	1. Change the method used to hide original nameplates.

2017/05/05 v184
	1. A macro binding editor is added for raid panel, so you can bind keys for macros.
	2. You can give an order for buffs, so you can find buff missing in the first time.

2017/05/02 v183
	1. Make sure the defaut nameplates will be hidden.

2017/04/29 v182
	1. Smooth mode added for raid panel.

2017/04/27 v181
	1. Force hide default nameplates in the next phase of the events.

2017/04/18 v180
	1. The blizzard's nameplates would be shown in the dungeon for frendly players.

2017/04/14 v179
	1. Fix the auto-gen equipset action bar.

2017/04/11 v178
	1. Roll back to v176, the spell map will cause some spell can't be used by raid panel.

2017/04/05 v177
	1. Fix fake spell caused by blizzard like 'flash heal' -> 'shadow mend'.

2017/04/04 v176
	1. Fix the cast bar won't hidden if system event don't trigger.

2017/04/01 v175
	1. Modify the artifact power display style.

2017/03/30 v174
	1. Fix for 7.2.0

2017/03/27 v170
	1. Add a menu "use mouse down" for raid panel.

2017/03/09 v169
	1. Fix the HELPFUL|PLAYER filter not works well.

2017/03/07 v168
	1. Fix the curreny info won't update.

2017/02/24 v167
	1. Fix a code error for raidpanel's aura refreshing.

2017/01/12 v166
	1. Update for the rogue's 10-max combo points.

2017/01/10 v165